--- a/thank.html
+++ b/thank.html
@@ -1,6 +1,7 @@
 <!Doctype HTML>
 <html>
     <head>
+        <link rel="icon" href="Assets/favicon.ico">
         <link rel="stylesheet" href="/styles/main.css" >
         <script
         src="https://code.jquery.com/jquery-3.3.1.js"
