--- a/about.html
+++ b/about.html
@@ -101,7 +101,7 @@
                         
                         <p>3D platformers, where have they gone? The 90s had this genre dominating every console. Enterra is an Ode to classic 3D platformers.
                         The collectathon nature of this game gives you an experience that feels both nostalgic, and new! Featuring buttery smooth movement like
-                        Jake and Daxter had, as well as several secret areas, levels and collectables just as Crash Bandicoot would hold. Also, who can't forget about
+                        Jak and Daxter had, as well as several secret areas, levels and collectables just as Crash Bandicoot would hold. Also, who can't forget about
                         the memorable locations, characters and sounds like Banjo Kazooie? Step inside a world of wonder!
                         </p>
                     </div>
