--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!Doctype HTML>
 <html>
     <head>
+        <title>Home | Enterra</title>
         <link rel="icon" href="Assets/favicon.ico">
         <link rel="stylesheet" href="/styles/main.css" >
         <script src="js/fade.js"></script>
