--- a/thank.html
+++ b/thank.html
@@ -1,6 +1,7 @@
 <!Doctype HTML>
 <html>
     <head>
+        <title>Thank You! | Enterra</title>
         <link rel="icon" href="Assets/favicon.ico">
         <link rel="stylesheet" href="/styles/main.css" >
         <script
