--- a/index.html
+++ b/index.html
@@ -98,6 +98,17 @@
                 <div class="fade-in">
                     <div class="centerText"><h1>Coming Soon!</h1></div>
                 </div>
+                
+                <div class="fade-in">
+                    <div class="centerImage">
+                        <img src="/Assets/Img/screenshots/HighresScreenshot00002.png" width=100%>
+                    </div>
+                </div>
+                <div class="fade-in">
+                    <div class="centerImage">
+                        <img src="/Assets/Img/screenshots/HighresScreenshot00007.png" width=100%>
+                    </div>
+                </div>
 
                 <div class="fade-in">
                     <!-- START - We recommend to place the below code where you want the form in your website html  -->
